--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="description" content="Flickr Photo Search">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/js/bootstrap-select.min.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
@@ -21,6 +23,10 @@
         <form class="navbar-form navbar-left" role="search">
           <div id="search-panel" class="form-group">
             <input type="text" class="form-control" placeholder="Search">
+            <select class="selectpicker" class="form-control">
+              <option value="all" selected>all</option>
+              <option value="any">any</option>
+            </select>
           </div>
           <button id="search" type="button" class="btn btn-default">Search</button>
         </form>
