--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
           <button id="search" type="button" class="btn btn-default">Search</button>
         </form>
       </div>
-      <div class="row">
-        <div id="images" class="container-fluid"></div>
+      <div class="row container-fluid">
+        <!--<div id="images" class="container-fluid">-->
+        <div id="images1" class="row"></div>
+        <div id="images2" class="row"></div>
+        <div id="images3" class="row"></div>
+        <div id="images4" class="row"></div>
+        <div id="images5" class="row"></div>
+        </div>
       </div>
     </div>
   </body>
