--- a/index.html
+++ b/index.html
@@ -41,5 +41,21 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="edit-modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Flickr Information</h4>
+          </div>
+          <div class="modal-body row">
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="close" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
