--- a/index.html
+++ b/index.html
@@ -32,7 +32,32 @@
         </form>
       </div>
       <div class="row">
-        <div id="images" class="container-fluid"></div>
+        <div id="images" class="container-fluid">
+
+
+        </div>
+      </div>
+      <div class ="row" id ="allModals">
+        <div class="modal fade" id="photoModal" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                  <p id="photoDescription">
+                  </p>
+                  <p>Tags:</p><p id="photoTags">
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
       </div>
     </div>
   </body>
