--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <option value="any">any</option>
             </select>
           </div>
-          <button id="search" type="button" class="btn btn-default">Search</button>
+          <button id="search" type="submit" class="btn btn-default">Search</button>
         </form>
       </div>
       <div class="row">
