--- a/index.html
+++ b/index.html
@@ -28,12 +28,37 @@
               <option value="any">any</option>
             </select>
           </div>
-          <button id="search" type="submit" class="btn btn-default">Search</button>
+          <button id="search" type="button" class="btn btn-default">Search</button>
         </form>
       </div>
       <div class="row">
         <div id="images" class="container-fluid"></div>
       </div>
     </div>
+    <div id="photo-details" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title"></h4>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div id="modal-thumbnail" class="col-md-6"></div>
+                <div id="modal-photo-details" class="col-md-6">
+                  <div class="photo-desc"></div>
+                  <div class="photo-desc"></div>
+                  <div class="photo-desc"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
   </body>
 </html>
